--- a/src/app/Paginas/cliente/pedido-cliente/pedido-cliente.component.html
+++ b/src/app/Paginas/cliente/pedido-cliente/pedido-cliente.component.html
@@ -1,61 +1,86 @@
 <div class="pedido-container">
   <h2>Pedido</h2>
-
   <form class="pedido-form">
     <div class="form-group">
       <label for="cedula">Cédula cliente</label>
-      <input id="cedula" type="text" />
+      <input type="text" id="cedula" name="cedula" />
     </div>
 
     <div class="form-group">
       <label for="nombre">Nombre</label>
-      <input id="nombre" type="text" />
+      <input type="text" id="nombre" name="nombre" />
     </div>
 
     <div class="form-group">
       <label for="correo">Correo</label>
-      <input id="correo" type="email" />
+      <input type="email" id="correo" name="correo" />
     </div>
 
     <div class="form-group">
       <label for="telefono">Teléfono</label>
-      <input id="telefono" type="tel" />
+      <input type="tel" id="telefono" name="telefono" />
     </div>
 
-    <div class="form-group">
-      <label for="idPedido">ID de pedido</label>
-      <input id="idPedido" type="text" />
-    </div>
-
-    <div class="form-group">
-      <label for="detalle">Detalle</label>
-      <input id="detalle" type="text" />
+    <div class="form-row">
+      <div class="form-group">
+        <label for="idPedido">ID de pedido</label>
+        <input type="text" id="idPedido" name="idPedido" />
+      </div>
+      <div class="form-group">
+        <label for="detalle">Detalle</label>
+        <input type="text" id="detalle" name="detalle" />
+      </div>
     </div>
 
     <div class="form-row">
       <div class="form-group">
         <label for="provincia">Provincia</label>
-        <input id="provincia" type="text" />
+        <select id="provincia" name="provincia">
+          <option value="">Seleccione una provincia</option>
+          <option value="Azuay">Azuay (Cuenca)</option>
+          <option value="Bolívar">Bolívar (Guaranda)</option>
+          <option value="Cañar">Cañar (Azogues)</option>
+          <option value="Carchi">Carchi (Tulcán)</option>
+          <option value="Chimborazo">Chimborazo (Riobamba)</option>
+          <option value="Cotopaxi">Cotopaxi (Latacunga)</option>
+          <option value="El Oro">El Oro (Machala)</option>
+          <option value="Esmeraldas">Esmeraldas (Esmeraldas)</option>
+          <option value="Galápagos">Galápagos (Puerto Baquerizo Moreno)</option>
+          <option value="Guayas">Guayas (Guayaquil)</option>
+          <option value="Imbabura">Imbabura (Ibarra)</option>
+          <option value="Loja">Loja (Loja)</option>
+          <option value="Los Ríos">Los Ríos (Babahoyo)</option>
+          <option value="Manabí">Manabí (Portoviejo)</option>
+          <option value="Morona Santiago">Morona Santiago (Macas)</option>
+          <option value="Napo">Napo (Tena)</option>
+          <option value="Orellana">Orellana (Francisco de Orellana)</option>
+          <option value="Pastaza">Pastaza (Puyo)</option>
+          <option value="Pichincha">Pichincha (Quito)</option>
+          <option value="Santa Elena">Santa Elena (Santa Elena)</option>
+          <option value="Santo Domingo de los Tsáchilas">Santo Domingo de los Tsáchilas (Santo Domingo)</option>
+          <option value="Sucumbíos">Sucumbíos (Nueva Loja)</option>
+          <option value="Tungurahua">Tungurahua (Ambato)</option>
+          <option value="Zamora Chinchipe">Zamora Chinchipe (Zamora)</option>
+        </select>
       </div>
 
       <div class="form-group">
         <label for="callePrincipal">Calle principal</label>
-        <input id="callePrincipal" type="text" />
+        <input type="text" id="callePrincipal" name="callePrincipal" />
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group">
         <label for="calleSecundaria">Calle secundaria</label>
-        <input id="calleSecundaria" type="text" />
+        <input type="text" id="calleSecundaria" name="calleSecundaria" />
       </div>
-
       <div class="form-group">
         <label for="codigoPostal">Código postal</label>
-        <input id="codigoPostal" type="text" />
+        <input type="text" id="codigoPostal" name="codigoPostal" />
       </div>
     </div>
 
-    <button type="submit">Enviar pedido</button>
+    <button type="submit">Enviar Pedido</button>
   </form>
 </div>
