fix-error-tickets

--- a/src/app/Paginas/admin/admin-materiales/admin-materiales.component.html
+++ b/src/app/Paginas/admin/admin-materiales/admin-materiales.component.html
@@ -5,7 +5,7 @@
     <nav>
       <button pButton label="Técnicos"></button>
       <button pButton label="Clientes"></button>
-      <button pButton label="Pedidos"></button>
+      <button pButton label="Pedidos" [routerLink]="'/pedido-admin'" routerLinkActivate="active"></button>
       <button pButton label="Tickets"></button>
 
       <button pButton label="Materiales" [routerLink]="'/admin-materiales'" routerLinkActive="active"></button>
