--- a/src/app/Paginas/admin/tickets/tickets.component.html
+++ b/src/app/Paginas/admin/tickets/tickets.component.html
@@ -17,9 +17,13 @@
   </div>
 
   <div class="form-group">
-    <label>Técnico</label>
-    <p-dropdown [options]="tecnicos" [(ngModel)]="ticket.tecnico"></p-dropdown>
-  </div>
+    <label>Cliente</label>
+    <p-dropdown 
+      [options]="tecnicos" 
+      [(ngModel)]="ticket.tecnico" 
+      optionLabel="name">
+    </p-dropdown>
+  
 
   <div class="form-group">
     <label>Estado</label>
