add-routes-loginFIX

--- a/src/app/Paginas/admin/admin-materiales/admin-materiales.component.html
+++ b/src/app/Paginas/admin/admin-materiales/admin-materiales.component.html
@@ -4,10 +4,9 @@
 
     <nav>
       <button pButton label="Técnicos"></button>
-      <button pButton label="Clientes"></button>
+      <button pButton label="Clientes" [routerLink]="'/admin-ListaCliente'" routerLinkActivate="active"></button>
       <button pButton label="Pedidos" [routerLink]="'/pedido-admin'" routerLinkActivate="active"></button>
-      <button pButton label="Tickets"></button>
-
+      <button pButton label="Tickets" [routerLink]="'/tickets'" routerLinkActivate="active"></button>
       <button pButton label="Materiales" [routerLink]="'/admin-materiales'" routerLinkActive="active"></button>
       <button pButton label="Reportes" [routerLink]="'/admin-reporte'" routerLinkActive="active"></button>
     </nav>
