--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -68,7 +68,8 @@
           </div>
 
           <!-- Rol -->
-          <div class="mb-4">
+
+          <!--div class="mb-4">
             <label for="rol" class="block text-xl font-semibold text-[#007bff]">Rol</label>
             <p-dropdown
               id="rol"
@@ -82,7 +83,7 @@
             <small *ngIf="loginForm.get('rol')?.touched && !loginForm.get('rol')?.value" class="p-error">
               Debes seleccionar un rol.
             </small>
-          </div>
+          </div-->
 
           <!-- ¿Olvidaste tu contraseña? -->
           <div class="text-right mb-4">
