Cambios en auth

--- a/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,46 +1,20 @@
 <p-toast position="top-center"></p-toast>
 
-<div
-  class="flex justify-content-center align-items-center min-h-screen min-w-screen bg-[#f8faff]"
->
-  <div
-    class="p-6 shadow-2 border-round w-full md:w-30rem"
-    style="background-color: white; border-radius: 1rem"
-  >
-    <h2 class="text-center text-2xl mb-4" style="color: #007bff">
+<div class="flex justify-content-center align-items-center min-h-screen min-w-screen bg-[#f8faff]">
+  <div class="p-6 shadow-2 border-round w-full md:w-30rem bg-white border-round">
+    <h2 class="text-center text-2xl mb-4 text-primary">
       Recuperar Contraseña
     </h2>
 
     <form [formGroup]="forgotForm" (ngSubmit)="sendRecoveryCode()">
-      <label for="email" class="block mb-2 font-semibold"
-        >Correo electrónico</label
-      >
-      <input
-        id="email"
-        type="email"
-        formControlName="email"
-        pInputText
-        class="w-full mb-3"
-        placeholder="ejemplo@email.com"
-        style="padding: 1rem; border-radius: 0.5rem"
-      />
-      <small
-        *ngIf="
-          forgotForm.get('email')?.invalid && forgotForm.get('email')?.touched
-        "
-        class="p-error"
-      >
+      <label for="email" class="block mb-2 font-semibold">Correo electrónico</label>
+      <input id="email" type="email" formControlName="email" pInputText class="w-full mb-3" placeholder="ejemplo@email.com" />
+
+      <small *ngIf="forgotForm.get('email')?.invalid && forgotForm.get('email')?.touched" class="p-error">
         Ingresa un correo válido.
       </small>
 
-      <button
-        type="submit"
-        pButton
-        label="Enviar código"
-        class="w-full mt-3"
-        [disabled]="forgotForm.invalid"
-        style="background-color: #ff6b00; color: white; border: none"
-      ></button>
+      <button type="submit" pButton label="Enviar código" class="w-full mt-3" [disabled]="forgotForm.invalid"></button>
     </form>
   </div>
 </div>
