--- a/src/app/Paginas/admin/admin-materiales/admin-materiales.component.html
+++ b/src/app/Paginas/admin/admin-materiales/admin-materiales.component.html
@@ -3,7 +3,7 @@
     <div class="logo">LOGO</div>
 
     <nav>
-      <button pButton label="Técnicos"></button>
+      <button pButton label="Técnicos" [routerLink]="'/lista-tecnico'" routerLinkActivate="active"></button>
       <button pButton label="Clientes" [routerLink]="'/admin-ListaCliente'" routerLinkActivate="active"></button>
       <button pButton label="Pedidos" [routerLink]="'/pedido-admin'" routerLinkActivate="active"></button>
       <button pButton label="Tickets" [routerLink]="'/tickets'" routerLinkActivate="active"></button>
