add-register-and-login-conexion-with-backend

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -94,12 +94,14 @@
 
           <!-- Botón ingresar -->
           <button
-            pButton
-            type="submit"
-            label="Ingresar"
-            class="w-full p-3 text-xl font-bold"
-            style="background-color: #ff6b00; border-radius: 0.8rem; color: white;"
+          pButton
+          type="button"
+          label="Ingresar"
+          class="w-full p-3 text-xl font-bold"
+          style="background-color: #ff6b00; border-radius: 0.8rem; color: white;"
+          (click)="funIngresar()"
           ></button>
+
 
           <!-- Botón registrarse -->
           <button
